DDP-6297 allow prism admin to edit user activities

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-redesigned.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-redesigned.component.html
@@ -7,9 +7,10 @@
 >
     <ng-container *ngIf="isLoaded && model">
         <section class="section">
-            <ddp-subject-panel></ddp-subject-panel>
+            <ddp-subject-panel *ngIf="selectedUser$ | async as selectedUser" [subject]="selectedUser"></ddp-subject-panel>
             <ddp-admin-action-panel
                 [activityReadonly]="isReadonly()"
+                [selectedUserGuid]="selectedUserGuid"
                 (requestActivityEdit)="updateIsAdminEditing($event)">
             </ddp-admin-action-panel>
         </section>
