--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/prism/prism.component.html
@@ -128,7 +128,8 @@
             <td mat-cell *matCellDef="let element" class="dashboard-column">
                 <a mat-stroked-button
                    class="dashboard-link"
-                   [routerLink]="'/' + dashboardRoute + '/' + element.guid"
+                   [routerLink]="'/' + dashboardRoute"
+                   [queryParams]="{ user_guid: element.guid }"
                    [attr.aria-label]="'SDK.Prism.DashboardButtonLabel' | translate : { user: getUserLabel(element) }">
                     {{'SDK.Prism.DashboardButton' | translate}}
                 </a>
