--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.scss
@@ -108,7 +108,7 @@ h3 {
 
   &__img-container {
     flex: 0 0 24rem;
-    height: 24rem;
+    height: 31rem;
 
     margin-right: 3rem;
 
@@ -121,6 +121,7 @@ h3 {
 
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
 
   &__name {
