Circadia: add mailing list modal and stay informed page

--- a/ddp-workspace/projects/ddp-circadia/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-circadia/src/styles/_typography.scss
@@ -30,3 +30,13 @@
 
   font-size: 3.2rem;
 }
+
+.text-link {
+  text-decoration: none;
+
+  color: $color-blue-2;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
