--- a/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <ng-template #userActivities>
-    <div class="registration-status">
+    <div *ngIf="status" class="registration-status">
       <span class="status">
         {{ 'EnrollmentStatus.Prefix' | translate }}
       </span>
