DDP-6297 allow prism admin to edit user activities (#618)
* DDP-6297 allow prism admin to edit user activities

* DDP-6297 fix dashboard redirect at the end of user activities

* DDP-6297 remove sensitive data from web storage

* DDP-6297 update css

* DDP-6297 fix indent

* DDP-6297 keep selected user in the session instead of url param

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
@@ -15,39 +15,16 @@
     }
 }
 
-.ddp-admin-action-panel {
-    &__text {
-        display: flex;
-        align-items: center;
-        margin: 0;
-        text-decoration: none !important;
-    }
+.subject-panel-container {
+    max-width: 1450px;
+    padding: 1rem 1.5625rem;
 }
 
 .ddp-admin-action-panel {
     background-color: mat-color($app-theme, 300);
-
-    &__text {
-        margin: 0 10px 0 0;
-    }
 }
 
 .admin-action-panel-container {
     max-width: 1450px;
     padding: 1rem 1.5625rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 710px) {
-    .ddp-admin-action-panel__text {
-        margin: 0 0 10px 0;
-    }
-
-    .admin-action-panel-container {
-        flex-direction: column;
-        align-items: flex-start;
-    }
 }
