Rare-X: Fix build errors

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
@@ -15,7 +15,7 @@
       *ngIf="isActivityShown && !isFetchingActivities"
       [studyGuid]="studyGuid"
       [activityGuid]="instanceGuid"
-      [isReadonly]="isReadonly"
+      [isInitiallyReadonly]="isReadonly"
       (submit)="onSubmit($event)"
     ></app-activity>
   </div>
