--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
@@ -23,7 +23,7 @@
         <ng-container *ngIf="model && model.introduction">
           <ddp-activity-section
             [section]="model.introduction"
-            [readonly]="model.readonly || dataEntryDisabled || isReadonly"
+            [readonly]="isReadonly()"
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
@@ -67,7 +67,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <ddp-activity-section
             [section]="currentSection"
-            [readonly]="model.readonly || dataEntryDisabled || isReadonly"
+            [readonly]="isReadonly()"
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
@@ -85,7 +85,7 @@
           <ng-container *ngIf="model.closing">
             <ddp-activity-section
               [section]="model.closing"
-              [readonly]="model.readonly || dataEntryDisabled || isReadonly"
+              [readonly]="isReadonly()"
               [validationRequested]="validationRequested"
               [studyGuid]="studyGuid"
               [activityGuid]="activityGuid"
@@ -115,7 +115,7 @@
 
             <div class="activity__btn-section__right">
               <button
-                *ngIf="!isLastStep && (!isConsent || isReadonly)"
+                *ngIf="!isLastStep && (!isConsent || isReadonly())"
                 class="button button_medium button_primary"
                 [disabled]="isPageBusy | async"
                 (click)="incrementStep()"
@@ -127,7 +127,7 @@
               ></button>
 
               <button
-                *ngIf="!isLastStep && isConsent && !isReadonly"
+                *ngIf="!isLastStep && isConsent && !isReadonly()"
                 class="button button_medium button_primary"
                 [disabled]="isPageBusy | async"
                 (click)="incrementStep()"
@@ -140,14 +140,14 @@
 
               <ng-container *ngIf="isLastStep">
                 <button
-                  *ngIf="isReadonly"
+                  *ngIf="isReadonly()"
                   class="button button_medium button_primary"
                   (click)="close()"
                   [innerHTML]="'SDK.CloseButton' | translate"
                 ></button>
 
                 <button
-                  *ngIf="!model.readonly && !isReadonly"
+                  *ngIf="!isReadonly()"
                   class="button button_medium button_primary"
                   #submitButton
                   [disabled]="(isPageBusy | async) || dataEntryDisabled"
