--- a/ddp-workspace/projects/ddp-basil/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-basil/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    background-color: beige;
+    background-color: darkseagreen;
 }
 
 .navigation {
