--- a/ddp-workspace/projects/ddp-basil/src/styles.scss
+++ b/ddp-workspace/projects/ddp-basil/src/styles.scss
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+@import './app-theme.scss';
+@import './styles/activity.scss';
+@import './styles/password.scss';
