--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -1,9 +1,11 @@
+$container-width: 1200px;
+
 .main > * {
     width: 100%;
 }
 
-.section {
-    border: 1px solid red;
+section {
+    box-sizing: border-box;
     text-align: center;
 
     &:nth-of-type(even) {
@@ -15,7 +17,7 @@
         padding-top: 108px;
         padding-bottom: 18px;
         text-align: center;
-        background-image: url('/assets/images/hero.png');
+        background-image: url(/assets/images/hero.png);
         background-repeat: no-repeat;
         background-position: top;
         background-size: cover;
@@ -54,7 +56,7 @@
         .image {
             flex: 0 1 400px;
             margin-right: 100px;
-            background-image: url('/assets/images/map.png');
+            background-image: url(/assets/images/map.png);
             background-repeat: no-repeat;
             background-position: top;
             background-size: contain;
@@ -77,7 +79,7 @@
         }
 
         .container {
-            max-width: 1440px;
+            max-width: $container-width;
             margin: 0 auto;
             color: #000000;
 
@@ -133,6 +135,71 @@
             text-align: left;
         }
     }
+
+    &.stay-informed {
+        padding-top: 86px;
+        padding-bottom: 72px;
+
+        .container {
+            box-sizing: border-box;
+            max-width: $container-width;
+            margin: 0 auto;
+            text-align: left;
+        }
+
+        .social-media {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 40px;
+
+            .text {
+                text-align: left;
+                margin: 0 40px 0 0;
+                flex: 2 1 auto;
+                max-width: unset;
+            }
+
+            &__links {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex: 0 1 260px;
+            }
+
+            &__link {
+                flex: 0 1 50px;
+                text-align: center;
+            }
+        }
+
+        .title {
+            margin: 0;
+            padding-bottom: 18px;
+            text-align: left;
+        }
+    }
+
+    &.join-cmi {
+        padding: 76px 0 99px 0;
+
+        .join-cmi-logo {
+            max-width: 500px;
+        }
+
+        .title {
+            margin-top: 40px;
+            margin-bottom: 34px;
+        }
+
+        .text {
+            margin-bottom: 25px;
+        }
+
+        .join-cmi-btn {
+            margin: 0;
+        }
+    }
 }
 
 .title, .text {
@@ -177,6 +244,7 @@
     font-size: 20px;
     letter-spacing: 0;
     margin: 25px 0 120px;
+    border: none;
 }
 
 .learn-more-btn {
