A-T: Remove edit activity button for ineligible participants & fix registration status mappings and messages

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
@@ -32,6 +32,7 @@
 
     <app-user-activities
       [activities]="activities"
+      [isParticipantIneligible]="isContactUsStatus"
       (startActivity)="goToActivity($event)"
       (continueActivity)="goToActivity($event)"
       (viewActivity)="goToActivity($event)"
