--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
@@ -124,7 +124,8 @@
         <button
           *ngIf="
             activity.activityCode !== activityCodes.REVIEW_AND_SUBMISSION &&
-            activity.activityCode !== activityCodes.ASSENT
+            activity.activityCode !== activityCodes.ASSENT &&
+            !isParticipantIneligible
           "
           class="BtnFilled BtnFilled--blue"
           (click)="editActivity.emit(activity)"
