--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
@@ -3,14 +3,7 @@
         <div class="content intro-block">
             <h1 class="intro-block__title semi-bold center" translate>HomePage.IntroSection.Title</h1>
             <p class="intro-block__text" translate>HomePage.IntroSection.Text</p>
-            <div *ngIf="!isAuthenticated" class="invitation">
-                <div>
-                    <a class="button button_basic" [routerLink]="'/' + appRoutes.Join" translate
-                        style="white-space: nowrap;padding-left:10px; padding-right:10px;">HomePage.IntroSection.Code</a>
-                </div>
-                <a class="button button_simple button_underline" href="https://rally.partners.org/study/testboston"
-                    target="_blank" translate>HomePage.IntroSection.NoCode</a>
-            </div>
+            <p translate>HomePage.IntroSection.NoCode</p>
         </div>
     </section>
     <section class="section about-section">
