--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -72,6 +72,13 @@ section {
         .title {
             margin-bottom: 34px;
         }
+        .text {
+            text-align: left;
+
+            &:first-of-type {
+                margin-bottom: 32px;
+            }
+        }
     }
 
     &.participate {
