Fix faq-section component and add tests for it

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
@@ -1,5 +1,5 @@
 <mat-accordion hideToggle="true" multi="true" displayMode="flat">
-    <ng-container *ngFor="let item of questions | translate | slice : 1 : (questionsCount? +questionsCount + 1 : undefined);">
+    <ng-container *ngFor="let item of questions | translate | slice : 0 : questionsCount;">
         <mat-expansion-panel #panel>
             <mat-expansion-panel-header collapsedHeight="100%" expandedHeight="100%">
                 <mat-icon *ngIf="!panel.expanded" class="faq-block__icon">add</mat-icon>
